# SiText

./: .gitignore  CLAUDE.md  FUTURE_FEATURES.md  GUI_CONVERSION.md  MIGRATION.md  PLAN.md  PROJECT_CONTEXT.md  README.md  SiTermText.spec  SiText.spec  build_app.sh  build_app_m2.sh  fix_app_bundle.sh  install.sh  launch_sitermtext.command  launch_sitext.command  pyproject.toml  requirements-dev.txt  requirements.txt  round_icon.py  run_app.py
.github/: copilot-instructions.md
SiTermText.app/Contents/: Info.plist
SiTermText.app/Contents/Frameworks/: liblzma.5.dylib  libssl.3.dylib  markdown-3.10.dist-info
SiTermText.app/Contents/Frameworks/Python.framework/Versions/3.12/Resources/: Info.plist
SiTermText.app/Contents/Frameworks/Python.framework/Versions/3.12/_CodeSignature/: CodeResources
SiTermText.app/Contents/Resources/markdown-3.10.dist-info/: RECORD
SiTermText.app/Contents/_CodeSignature/: CodeResources
images/: icon.icns  icon_rounded.icns
sitermtext/: __init__.py  config.py  main.py  main_gui.py
sitermtext/gui/: __init__.py  editor.py  file_list.py  graph_view.py  hashtag_panel.py  main_window.py  themes.py
sitermtext/utils/: __init__.py  pdf_export.py
sitermtext/widgets/: __init__.py  editor.py  file_list.py
sitext/: __init__.py  config.py  main.py  main_gui.py
sitext/gui/: __init__.py  editor.py  file_list.py  graph_view.py  main_window.py  notification.py  pinned_files.py  themes.py
sitext/utils/: __init__.py  markdown_parser.py  pdf_export.py
sitext/widgets/: __init__.py  hashtag_panel.py  settings_screen.py
