[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitermtext"
version = "0.1.0"
description = "A fast, keyboard-driven note-taking app with markdown and wiki-style linking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Silas Slack"}
]
keywords = ["notes", "markdown", "gui", "qt", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-QScintilla>=2.14.0",
    "markdown>=3.5",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
sitermtext = "sitermtext.main_gui:run"

[project.urls]
Homepage = "https://github.com/silasslack/sitermtext"
Repository = "https://github.com/silasslack/sitermtext"
Issues = "https://github.com/silasslack/sitermtext/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
